[package]
name = "augment-vip"
version = "0.2.0"
edition = "2021"

[dependencies]
uuid = { version = "1.4", features = ["v4"] }
dirs = "6.0.0"
base64 = "0.22"
serde_json = "1.0"
sha2 = "0.10"
rusqlite = { version = "0.36", features = ["bundled"] }

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"
